Updated the Spanish translation.

--- a/po/wesnoth-dw/es.po
+++ b/po/wesnoth-dw/es.po
@@ -5,8 +5,8 @@ msgstr ""
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
 "PO-Revision-Date: 2010-12-03 15:34-0400\n"
 "Last-Translator: PeterPorty <p_llorens@hotmail.com>\n"
-"Language-Team: none\n"
-"Language: \n"
+"Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3054,6 +3054,12 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/13_Epilogue.cfg:118
+#, fuzzy
+#| msgid ""
+#| "Teeloa returned to his home where he had been captured by the saurians. "
+#| "He was delighted to find that many of his family members had also "
+#| "returned. He visited Jotha frequently, and remained friends with all the "
+#| "other veterans."
 msgid ""
 "Teelöa returned to his home where he had been captured by the saurians. He "
 "was delighted to find that many of his family members had also returned. He "
