--- a/po/wesnoth-l/es.po
+++ b/po/wesnoth-l/es.po
@@ -8,20 +8,21 @@
 # Sergi March <sergi.march@gmail.com>, 2008.
 # Gustavo Gingins <gusgins@gmail.com>, 2009.
 # Ignacio R. Morelle <shikadilord@users.sourceforge.net>, 2009.
+# Víctor <quianaaelonin@gmail.com>, 2011.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2009-01-12 00:28-0300\n"
-"Last-Translator: Gustavo Gingins <gusgins@gmail.com>\n"
-"Language-Team: Español <es@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2011-12-19 15:14+0100\n"
+"PO-Revision-Date: 2011-09-25 23:38+0200\n"
+"Last-Translator: Víctor <quianaaelonin@gmail.com>\n"
+"Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. [campaign]: id=Liberty
 #. Yes, that is "marchlanders", not "marshlanders".
@@ -79,7 +80,7 @@ msgstr "Fugitivo"
 #. "marchlander" is archaic English for an inhabitant of a border region.
 #: data/campaigns/Liberty/_main.cfg:27
 msgid "(Intermediate level, 8 scenarios.)"
-msgstr ""
+msgstr "(Nivel Intermedio, 8 escenarios.)"
 
 #. [campaign]: id=Liberty
 #. Yes, that is "marchlanders", not "marshlanders".
@@ -93,13 +94,12 @@ msgid ""
 "troops but darker foes including orcs and undead.\n"
 "\n"
 msgstr ""
-"Mientras la sombra de la guerra civil se alarga a través de Wesnoth, una "
-"banda de robustos hombres de los confines se subleva contra la tiranía de la "
-"reina Asheviere. Para ganar su camino a la libertad, tendrán que derrotar no "
-"sólo a las entrenadas espadas de las tropas de Wesnoth, sino también "
-"enemigos más oscuros incluidos los orcos y los no muertos.\n"
+"Mientras la sombra de la guerra civil se extiende a través de Wesnoth, una "
+"banda de robustos hombres de los confines wesnothianos se subleva contra la "
+"tiranía de la reina Asheviere. Para ganar su camino a la libertad, tendrán "
+"que derrotar no sólo a las entrenadas espadas de las tropas de Wesnoth, sino "
+"también enemigos más oscuros incluidos los orcos y los no muertos.\n"
 "\n"
-"(Nivel intermedio, 9 escenarios)"
 
 #. [about]
 #: data/campaigns/Liberty/_main.cfg:30
