--- a/po/wesnoth-nr/es.po
+++ b/po/wesnoth-nr/es.po
@@ -10,16 +10,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-12-15 10:39+0100\n"
+"POT-Creation-Date: 2011-12-19 15:14+0100\n"
 "PO-Revision-Date: 2009-12-15 23:38+0100\n"
 "Last-Translator: Diego J. <diegojromerolopez@gmail.com>\n"
-"Language-Team: Spanish <es@li.org>\n"
+"Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:9
@@ -2724,6 +2723,10 @@ msgstr ""
 
 #. [message]: speaker=Krash
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1004
+#, fuzzy
+#| msgid ""
+#| "It’s an escape tunnel. The hole wasn’t big enough for me to go through "
+#| "but one you little guys you might fit."
 msgid ""
 "It’s an escape tunnel. The hole wasn’t big enough for me to go through but "
 "one of you little guys might fit."
@@ -7652,6 +7655,8 @@ msgstr ""
 
 #. [message]: speaker=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:247
+#, fuzzy
+#| msgid "Pff, foolish human. What in the world gave you that idea."
 msgid "Pff, foolish human. What in the world gave you that idea?"
 msgstr "Uff, humano necio. Qué cosa en el mundo os pudo haber dado tal idea."
 
