--- a/po/wesnoth-did/es.po
+++ b/po/wesnoth-did/es.po
@@ -14,13 +14,12 @@ msgstr ""
 "POT-Creation-Date: 2011-10-07 22:09+0200\n"
 "PO-Revision-Date: 2010-05-04 19:40+0100\n"
 "Last-Translator: Diego J. <diegojromerolopez@gmail.com>\n"
-"Language-Team: Spanish <es@li.org>\n"
+"Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. [scenario]: id=11_Descent_into_Darkness, id=Mal Keshar
 #. [campaign]: id=Descent_into_Darkness
