--- a/po/wesnoth-manpages/es.po
+++ b/po/wesnoth-manpages/es.po
@@ -12,13 +12,12 @@ msgstr ""
 "POT-Creation-Date: 2011-08-27 10:13+0300\n"
 "PO-Revision-Date: 2009-04-05 12:11-0400\n"
 "Last-Translator: Ignacio R. Morelle <shikadilord@users.sourceforge.net>\n"
-"Language-Team: Spanish <es@li.org>\n"
+"Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
 
 # type: TH
 #. type: TH
@@ -92,6 +91,16 @@ msgstr ""
 # type: Plain text
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:42
+#, fuzzy
+#| msgid ""
+#| "Defeat all enemy leaders using a well-chosen cadre of troops, taking care "
+#| "to manage your resources of gold and villages. All units have their own "
+#| "strengths and weaknesses; to win, deploy your forces to their best "
+#| "advantage while denying your foes the chance to do the same. As units "
+#| "gain experience, they acquire new abilities and become more powerful. "
+#| "Play in your own language and test your skill against a smart computer "
+#| "opponent, or join Wesnoth's large community of on-line players. Create "
+#| "your own custom units, scenarios or campaigns, and share them with others."
 msgid ""
 "Defeat all enemy leaders using a well-chosen cadre of troops, taking care to "
 "manage your resources of gold and villages. All units have their own "
