--- a/po/wesnoth-sof/es.po
+++ b/po/wesnoth-sof/es.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-12-15 10:39+0100\n"
+"POT-Creation-Date: 2011-12-19 15:14+0100\n"
 "PO-Revision-Date: 2009-12-15 23:41+0100\n"
 "Last-Translator: Diego J. <diegojromerolopez@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
@@ -19,7 +19,6 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:11
@@ -2013,6 +2012,10 @@ msgstr ""
 
 #. [message]: speaker=Durstorn
 #: data/campaigns/Sceptre_of_Fire/scenarios/4t_The_Jeweler.cfg:157
+#, fuzzy
+#| msgid ""
+#| "That makes sense, I guess you would to plan the sceptre’s design... what "
+#| "in particular do you want him to do?"
 msgid ""
 "That makes sense, I guess you would want to plan the sceptre’s design... "
 "what in particular do you want him to do?"
@@ -2302,6 +2305,8 @@ msgstr ""
 
 #. [message]: speaker=Glonoin
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:223
+#, fuzzy
+#| msgid "Och, its some o’ them cave-dwarves. What business do you have here?"
 msgid "Och, it’s some o’ them cave-dwarves. What business do you have here?"
 msgstr ""
 "Ay, son algunos de los enanos de las cuevas. ¿Qué negocios tenéis aquí?"
