--- a/po/wesnoth-test/es.po
+++ b/po/wesnoth-test/es.po
@@ -11,13 +11,12 @@ msgstr ""
 "POT-Creation-Date: 2010-05-24 17:53+0200\n"
 "PO-Revision-Date: 2008-11-21 13:19-0300\n"
 "Last-Translator: Ignacio R. Morelle <shikadilord@users.sourceforge.net>\n"
-"Language-Team: Spanish <es@li.org>\n"
+"Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. [test_key2]
 #: data/test/test/_main.cfg:24
