--- a/po/wesnoth-thot/es.po
+++ b/po/wesnoth-thot/es.po
@@ -12,13 +12,12 @@ msgstr ""
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
 "PO-Revision-Date: 2009-12-15 23:47+0100\n"
 "Last-Translator: Diego J. <diegojromerolopez@gmail.com>\n"
-"Language-Team: Spanish <es@li.org>\n"
+"Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:10
