--- a/po/wesnoth-tsg/es.po
+++ b/po/wesnoth-tsg/es.po
@@ -13,13 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
 "PO-Revision-Date: 2010-07-27 18:10-0400\n"
 "Last-Translator: PeterPorty <p_llorens@hotmail.com>\n"
-"Language-Team: Español <es@li.org>\n"
-"Language: \n"
+"Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);X-Generator: KBabel 1.11.4\n"
-"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:9
