--- a/po/wesnoth-utbs/es.po
+++ b/po/wesnoth-utbs/es.po
@@ -13,17 +13,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2011-02-17 17:36-0500\n"
+"PO-Revision-Date: 2012-01-01 20:38-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
-"Language-Team: Spanish <es@li.org>\n"
+"Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-Language: Spanish\n"
-"X-Poedit-Country: SPAIN\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. [campaign]: id=Under_the_Burning_Suns
 #. [editor_group]: id=utbs
@@ -16647,7 +16644,7 @@ msgstr ""
 #: data/campaigns/Under_the_Burning_Suns/units/undead/Ethereal_Spectre.cfg:16
 #: data/campaigns/Under_the_Burning_Suns/units/undead/Ethereal_Wraith.cfg:17
 msgid "SPECIAL_NOTE^ This unit is able to move through solid stone walls."
-msgstr "Esta unidad es capaz de desplazarse a través de muros de roca sólida."
+msgstr " Esta unidad es capaz de desplazarse a través de muros de roca sólida."
 
 #. [unit_type]: id=ENightgaunt
 #: data/campaigns/Under_the_Burning_Suns/units/undead/Ethereal_Nightgaunt.cfg:7
@@ -16660,7 +16657,7 @@ msgid ""
 "SPECIAL_NOTE^ Unlike normal Nightgaunts, Ethereal Nightgaunts cannot hide at "
 "night."
 msgstr ""
-"A diferencia de las Pesadillas normales, las Pesadillas etéreas no pueden "
+" A diferencia de las Pesadillas normales, las Pesadillas etéreas no pueden "
 "ocultarse durante la noche."
 
 #. [unit_type]: id=ENightgaunt
@@ -16686,7 +16683,7 @@ msgstr "Sombra etérea"
 msgid ""
 "SPECIAL_NOTE^ Unlike normal Shadows, Ethereal Shadows cannot hide at night."
 msgstr ""
-"A diferencia de las Sombras normales, las Sombras etéreas no pueden "
+" A diferencia de las Sombras normales, las Sombras etéreas no pueden "
 "ocultarse durante la noche."
 
 #. [unit_type]: id=EShadow
@@ -16830,8 +16827,7 @@ msgstr "hacha"
 #: data/campaigns/Under_the_Burning_Suns/utils/abilities.cfg:77
 msgid " This unit is capable of basic healing and slowing dehydration."
 msgstr ""
-" Esta unidad es capaz de sanamiento básico y puede retardar la "
-"deshidratación."
+" Esta unidad es capaz de sanación básica y puede retardar la deshidratación."
 
 #: data/campaigns/Under_the_Burning_Suns/utils/abilities.cfg:80
 msgid ""
