Updated the Spanish translation.

--- a/po/wesnoth-anl/es.po
+++ b/po/wesnoth-anl/es.po
@@ -15,14 +15,15 @@
 # Sergi March <sergi.march@gmail.com>, 2008.
 # Ignacio R. Morelle <shikadilord@users.sourceforge.net>, 2008, 2009.
 # Víctor <quianaaelonin@gmail.com>, 2011.
+# Aelonin <quianaaelonin@gmail.com>, 2012.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-10-07 22:09+0200\n"
-"PO-Revision-Date: 2011-09-24 18:55+0200\n"
-"Last-Translator: Víctor <quianaaelonin@gmail.com>\n"
+"POT-Creation-Date: 2011-12-19 15:14+0100\n"
+"PO-Revision-Date: 2012-01-02 04:16+0100\n"
+"Last-Translator: Aelonin <quianaaelonin@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -131,16 +132,12 @@ msgstr ""
 # Este cambio de número plural/sigular no funciona igual de bien en castillano; he estado por poner todo en plural y dejar la segunda parte en impersonal. Opté por lo segundo.
 #. [message]: type=Peasant
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:591
-#, fuzzy
-#| msgid ""
-#| "I swear I saw somebody trapped in the spider’s web. Maybe we should "
-#| "rescue them?"
 msgid ""
 "I swear I saw somebody trapped in the spider’s web. Maybe we should rescue "
 "him?"
 msgstr ""
-"Juro haber visto a alguien atrapado entre la tela de araña de ahí. ¿Quizá "
-"deberíamos acudir al rescate?"
+"Juro haber visto a alguien atrapado una tela de araña. ¿Quizá deberíamos "
+"acudir al rescate?"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:613
