--- a/po/wesnoth-editor/es.po
+++ b/po/wesnoth-editor/es.po
@@ -7,14 +7,14 @@
 # Roberto Romero <sildurin@gmail.com>, 2007.
 # Sergi March <sergi.march@gmail.com>, 2008.
 # Ignacio Riquelme Morelle <shadowm2006@gmail.com>, 2008, 2009, 2010.
-# Víctor <quianaaelonin@gmail.com>, 2011.
+# Aelonin <quianaaelonin@gmail.com>, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-09-05 20:54-0500\n"
+"POT-Creation-Date: 2011-12-19 15:14+0100\n"
+"PO-Revision-Date: 2012-01-01 22:44-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
@@ -259,8 +259,6 @@ msgid "Map creation failed."
 msgstr "Falló la creación del mapa."
 
 #: src/editor/editor_controller.cpp:520
-#, fuzzy
-#| msgid "Choose a mask to apply"
 msgid "Choose a Mask to Apply"
 msgstr "Escoja una máscara a aplicar"
 
@@ -269,8 +267,6 @@ msgid "Error loading mask"
 msgstr "Error al cargar la máscara"
 
 #: src/editor/editor_controller.cpp:542
-#, fuzzy
-#| msgid "Choose target map"
 msgid "Choose Target Map"
 msgstr "Escoja mapa de destino"
 
@@ -348,7 +344,7 @@ msgstr "No funcionará en un juego sin atención adicional."
 
 #: src/editor/editor_palettes.cpp:526
 msgid "FG: "
-msgstr "1er plano: "
+msgstr "Primer plano: "
 
 #: src/editor/editor_palettes.cpp:527
 msgid "BG: "
@@ -379,14 +375,12 @@ msgid "Could not save the map: $msg"
 msgstr "No se pudo guardar el mapa: $msg"
 
 #: src/gui/dialogs/editor_set_starting_position.cpp:84
-#, fuzzy
-#| msgid "(Player)^None"
 msgid "player^None"
 msgstr "Ninguno"
 
 #: src/gui/dialogs/editor_set_starting_position.cpp:96
 msgid "Player $player_number"
-msgstr ""
+msgstr "Jugador $player_number"
 
 #: src/gui/dialogs/editor_settings.cpp:148
 msgid "Custom setting"
