--- a/po/wesnoth-help/es.po
+++ b/po/wesnoth-help/es.po
@@ -23,8 +23,8 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-19 15:14+0100\n"
-"PO-Revision-Date: 2012-01-01 20:57-0500\n"
-"Last-Translator: Aelonin <quianaaelonin@gmail.com>\n"
+"PO-Revision-Date: 2012-01-01 23:55-0500\n"
+"Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -206,7 +206,7 @@ msgid ""
 msgstr ""
 "Una gigantesca estructura con forma de castillo que es hogar de una "
 "<ref>dst='flight' text='bandada'</ref>. Contiene el <ref>dst='breeding_pen' "
-"text='area de incubación.'</ref>."
+"text='area de incubación'</ref>."
 
 # No... definitivamente, no... nein...
 #
@@ -1308,7 +1308,7 @@ msgid ""
 msgstr ""
 "Algunas armas tienen características especiales que aumentan la eficacia de "
 "atacar con ellas.\n"
-" \n"
+"\n"
 
 #. [topic]: id=.unknown_unit
 #: data/core/help.cfg:109
@@ -1348,13 +1348,14 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"<i>La batalla por Wesnoth</i> es un juego de estrategia por turnos de índole "
-"fantástica, con un enfoque poco usual entre los juegos modernos de "
-"estrategia. Mientras otros juegos buscan la complejidad de reglas y sistema "
-"de juego, en <i>La batalla por Wesnoth</i> se persigue todo lo contrario. "
-"Esto no hace simple al juego, sino al contrario: a partir de unas reglas "
-"simples pueden crearse grandes estrategias, haciendo que el juego sea fácil "
-"de aprender pero difícil de dominar con maestría."
+"<italic>text='La batalla por Wesnoth'</italic> es un juego de estrategia por "
+"turnos de índole fantástica, con un enfoque poco usual entre los juegos "
+"modernos de estrategia. Mientras otros juegos buscan la complejidad de "
+"reglas y sistema de juego, en <italic>text='La batalla por Wesnoth'</italic> "
+"se persigue todo lo contrario. Esto no hace simple al juego, sino al "
+"contrario: a partir de unas reglas simples pueden crearse grandes "
+"estrategias, haciendo que el juego sea fácil de aprender pero difícil de "
+"dominar con maestría."
 
 #. [topic]: id=fundamentals
 #: data/core/help.cfg:132
@@ -1370,11 +1371,11 @@ msgid ""
 "come across new aspects of the game. For more detailed information on "
 "special situations and exceptions, please follow the links included."
 msgstr ""
-"Estas páginas esbozan todo lo que tiene que saber para jugar a <i>La batalla "
-"por Wesnoth</i>. A medida que juegue, se irá añadiendo más información a "
-"estas páginas para cubrir los aspectos del juego que vayan apareciendo. Si "
-"desea conocer todas las excepciones y situaciones especiales, por favor, "
-"siga los enlaces que se indican."
+"Estas páginas esbozan todo lo que tiene que saber para jugar a "
+"<italic>text='La batalla por Wesnoth'</italic>. A medida que juegue, se irá "
+"añadiendo más información a estas páginas para cubrir los aspectos del juego "
+"que vayan apareciendo. Si desea conocer todas las excepciones y situaciones "
+"especiales, por favor, siga los enlaces que se indican."
 
 #. [topic]: id=fundamentals
 #: data/core/help.cfg:135
@@ -1391,12 +1392,12 @@ msgstr ""
 "\n"
 "\n"
 "Para empezar, es mejor que pulse con el ratón en el botón "
-"«<italic>text=Tutorial</italic>» que hay en el menú principal. Esto le "
-"llevará a un tutorial interactivo que le enseñará los fundamentos de "
-"Wesnoth. Tras él, le recomendamos que juegue la campaña Heredero al trono en "
-"primer lugar. Para ello, pinche en «<italic>text=Campañas</italic>» y luego "
-"en <italic>text='Heredero al trono'</italic>. Ya que la batalla por Wesnoth "
-"puede ser un juego complicado, puede que quiera empezar en el nivel "
+"«<bold>text='Tutorial'</bold>» que hay en el menú principal. Esto le llevará "
+"a un tutorial interactivo que le enseñará los fundamentos de Wesnoth. Tras "
+"él, le recomendamos que juegue la campaña <italic>text='Heredero al trono'</"
+"italic> en primer lugar. Para ello, pinche en «<bold>text='Campañas'</bold>» "
+"y luego en <italic>text='Heredero al trono'</italic>. Ya que la batalla por "
+"Wesnoth puede ser un juego complicado, puede que quiera empezar en el nivel "
 "<italic>text=fácil</italic>."
 
 #. [topic]: id=fundamentals
@@ -1431,13 +1432,14 @@ msgid ""
 "other people connected to that network. If your computer has a connection to "
 "the Internet, you can play against other people across the Internet."
 msgstr ""
-"En el juego tienen lugar una serie de batallas, denominadas «escenarios». "
-"Cada escenario enfrenta sus tropas con las tropas de uno o más adversarios. "
-"Puede jugar contra el ordenador, o con sus amigos, utilizando todos el mismo "
-"ordenador, por turnos (denominado juego «compartiendo silla»). Si su "
-"ordenador está conectado a una red local, también podrá jugar contra gente "
-"que esté conectada en esa red. Si su ordenador tiene una conexión a "
-"Internet, podrá jugar contra otras personas a través de Internet."
+"En el juego tienen lugar una serie de batallas, denominadas "
+"«<italic>text='escenarios'</italic>». Cada escenario enfrenta sus tropas con "
+"las tropas de uno o más adversarios. Puede jugar contra el ordenador, o con "
+"sus amigos, utilizando todos el mismo ordenador, por turnos (denominado "
+"juego «compartiendo silla»). Si su ordenador está conectado a una red local, "
+"también podrá jugar contra gente que esté conectada en esa red. Si su "
+"ordenador tiene una conexión a Internet, podrá jugar contra otras personas a "
+"través de Internet."
 
 #. [topic]: id=about_game
 #: data/core/help.cfg:146
@@ -1451,10 +1453,10 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"Una <i>campaña</i> consiste de una colección de escenarios puestos uno "
-"detrás de otro, a modo de historia. En una campaña, a menudo necesitará "
-"jugar de modo más cuidadoso, preservando sus mejores tropas para poder "
-"utilizarlas más tarde en posteriores escenarios de la campaña."
+"Una <italic>text='campaña'</italic> consiste de una colección de escenarios "
+"puestos uno detrás de otro, a modo de historia. En una campaña, a menudo "
+"necesitará jugar de modo más cuidadoso, preservando sus mejores tropas para "
+"poder utilizarlas más tarde en posteriores escenarios de la campaña."
 
 #. [topic]: id=victory_and_defeat
 #: data/core/help.cfg:152
@@ -1471,13 +1473,13 @@ msgid ""
 "designated point, say, or rescuing someone, or solving a puzzle, or holding "
 "out against a siege until a certain number of turns have elapsed."
 msgstr ""
-"Presta suma atención al cuadro emergente «<b>Objetivos</b>» al principio de "
-"cada escenario. Por lo general, conseguirás la victoria por matar a todos "
-"los líderes enemigos, y sólo serás derrotado si matan a tu líder. Pero los "
-"escenarios pueden tener otros objetivos de victoria - llevar a tu líder a un "
-"punto designado, por ejemplo, o rescatar a alguien, o la solución de un "
-"puzzle, o resistir un sitio hasta que un cierto número de turnos hayan "
-"transcurrido."
+"Presta suma atención al cuadro emergente «<bold>text='Objetivos'</bold>» al "
+"principio de cada escenario. Por lo general, conseguirás la victoria por "
+"matar a todos los líderes enemigos, y sólo serás derrotado si matan a tu "
+"líder. Pero los escenarios pueden tener otros objetivos de victoria - llevar "
+"a tu líder a un punto designado, por ejemplo, o rescatar a alguien, o la "
+"solución de un puzzle, o resistir un sitio hasta que un cierto número de "
+"turnos hayan transcurrido."
 
 #. [topic]: id=victory_and_defeat
 #: data/core/help.cfg:155
@@ -1491,10 +1493,11 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"Cuando ganes un escenario, el mapa se volverá gris y el botón «<b>Fin de "
-"Turno</b>» cambiará a «<b>Fin de escenario</b>». Ahora puedes hacer cosas "
-"como modificar las opciones de guardado o (si estás en modo multijugador) "
-"chatear con otros jugadores antes de pulsar ese botón para avanzar."
+"Cuando ganes un escenario, el mapa se volverá gris y el botón "
+"«<bold>text='Fin de turno'</bold>» cambiará a «<bold>text='Fin de "
+"escenario'</bold>». Ahora puedes hacer cosas como modificar las opciones de "
+"guardado o (si estás en modo multijugador) chatear con otros jugadores antes "
+"de pulsar ese botón para avanzar."
 
 #. [topic]: id=recruit_and_recall
 #: data/core/help.cfg:162
@@ -1518,14 +1521,15 @@ msgstr ""
 "Cada bando comienza con un líder en su torreón. Al comienzo de cada batalla, "
 "y a veces durante ella, necesitará reclutar <ref>dst='..units' "
 "text='unidades'</ref> para su ejército. Para ello, ha de tener a su líder "
-"(por ejemplo, Konrad en la campaña «Heredero al trono») en la casilla del "
-"torreón de un <ref>dst='terrain_castle' text='castillo'</ref>. Entonces "
-"podrá reclutar tan sólo con escoger «Reclutar» en el menú, o bien pulsando "
-"el botón derecho en un hexágono y seleccionando la opción "
-"«<bold>text=Reclutar</bold>». Al hacer esto, se mostrará el menú de "
-"reclutamiento, donde se listan las unidades disponibles para reclutar, junto "
-"con su coste en piezas de oro. Haga clic en una unidad para ver sus "
-"estadísticas, y luego presione el botón Reclutar para hacerlo."
+"(por ejemplo, Konrad en la campaña <italic>text='Heredero al trono'</"
+"italic>») en la casilla del torreón de un <ref>dst='terrain_castle' "
+"text='castillo'</ref>. Entonces podrá reclutar tan sólo con escoger "
+"«<bold>text='Reclutar'</bold>» en el menú, o bien pulsando el botón derecho "
+"en un hexágono y seleccionando la opción «<bold>text='Reclutar'</bold>». Al "
+"hacer esto, se mostrará el menú de reclutamiento, donde se listan las "
+"unidades disponibles para reclutar, junto con su coste en piezas de oro. "
+"Haga clic en una unidad para ver sus estadísticas, y luego presione el botón "
+"Reclutar para hacerlo."
 
 #. [topic]: id=recruit_and_recall
 #: data/core/help.cfg:165
@@ -1648,11 +1652,12 @@ msgid ""
 "recruited unit starts with no experience points, and gains experience by "
 "fighting enemies."
 msgstr ""
-"Cada unidad tiene un cierto número de <i>puntos de vida</i> (PV). Si los "
-"puntos de vida de una unidad descienden por debajo de 1, la unidad muere. "
-"Cada unidad tiene también un cierto número de <i>puntos de experiencia</i> "
-"(PX). Una unidad recién reclutada comienza sin puntos de experiencia, y gana "
-"experiencia luchando contra enemigos."
+"Cada unidad tiene un cierto número de <italic>text='puntos de vida'</italic> "
+"(PV). Si los puntos de vida de una unidad descienden por debajo de 1, la "
+"unidad muere. Cada unidad tiene también un cierto número de "
+"<italic>text='puntos de experiencia'</italic> (PX). Una unidad recién "
+"reclutada comienza sin puntos de experiencia, y gana experiencia luchando "
+"contra enemigos."
 
 #. [topic]: id=hitpoints
 #: data/core/help.cfg:196
@@ -2699,7 +2704,7 @@ msgstr ""
 "Para las criaturas silvestres de baja cognición, los hogares de los seres "
 "dotados de consciencia difícilmente ofrecen cobijo. Resultado de ello, una "
 "unidad <italic>text='salvaje'</italic> recibirá no más de un 50% de defensa "
-"en villas terrestres."
+"en aldeas terrestres."
 
 #. [topic]: id=traits_loyal
 #: data/core/help.cfg:406
@@ -2713,7 +2718,7 @@ msgid ""
 "upkeep cost at the end of every turn, which is equal to their level. Loyal "
 "units do not incur this cost."
 msgstr ""
-"Las unidades <italic>text='leales'<italic> no exigen que las mantengan. La "
+"Las unidades <italic>text='leales'</italic> no exigen que las mantengan. La "
 "mayoría de las unidades requieren un coste de mantenimiento al final de cada "
 "turno igual a su nivel. Las unidades leales no tienen este coste."
 
@@ -2902,7 +2907,7 @@ msgid ""
 "Units with trait <italic>text='dim'</italic> suffer a 20% increase in "
 "experience required to advance."
 msgstr ""
-"Las unidades <italic>text='obtusas'<italic> sufren un aumento en un 20% de "
+"Las unidades <italic>text='obtusas'</italic> sufren un aumento en un 20% de "
 "la experiencia requerida para avanzar niveles."
 
 #. [topic]: id=traits_dim
@@ -2959,7 +2964,7 @@ msgid ""
 "hitpoints and melee damage."
 msgstr ""
 "Las unidades con el rasgo <italic>text='débil'</italic> tienen una reducción "
-"en 1 PV; e infligen 1 punto de daño menos en ataques cuerpo a cuerpo."
+"en 1 PV, e infligen 1 punto de daño menos en ataques cuerpo a cuerpo."
 
 #. [topic]: id=traits_aged
 #: data/core/help.cfg:476
@@ -2973,7 +2978,7 @@ msgid ""
 "hitpoints and a −1 increment in movement and melee damage."
 msgstr ""
 "Las unidades <italic>text='ancianas'</italic> se ven afectadas con una "
-"reducción de 8 PV y, e infligen 1 punto de daño menos en ataques cuerpo a "
+"reducción de 8 PV, e infligen 1 punto de daño menos en ataques cuerpo a "
 "cuerpo."
 
 #. [topic]: id=..terrains
@@ -3718,7 +3723,7 @@ msgid ""
 msgstr ""
 "\n"
 "Redibuja la pantalla y recarga cualquier archivo de imagen que haya "
-"cambiado. \n"
+"cambiado.\n"
 "\n"
 
 #. [topic]: id=general_commands
@@ -3799,8 +3804,9 @@ msgstr ""
 "\n"
 "Cede los controles del bando (escriba aquí el número del bando) al usuario "
 "(escriba aquí el apodo del jugador u observador). Puedes comprobar qué bando "
-"pertenece a qué jugador en el diálogo de «Ajustes de Escenario» (Presiona el "
-"botón «más» en la «Tabla de Estado» (alt+s por defecto) para llegar ahí.). "
+"pertenece a qué jugador en el diálogo de «<bold>text='Preferencias del "
+"escenario'</bold>» (Presiona el botón «<bold>text='más'</bold>» en la "
+"«<bold>text='Tabla de estado'</bold>» (alt+s por defecto) para llegar ahí.). "
 "El servidor puede cambiar el control de cualquier bando.\n"
 "\n"
 
@@ -4984,6 +4990,8 @@ msgstr "salvaje"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
+#, fuzzy
+#| msgid "Receive only 50% defense in land-based villages"
 msgid "Receives only 50% defense in land-based villages"
 msgstr "Sólo recibe 50% de defensa en aldeas terrestres"
 
@@ -5801,9 +5809,9 @@ msgstr ""
 "acumulando aún más enemigos en los engañados trolls. El enemigo más común de "
 "los trolls son los enanos, y la animosidad entre estas dos razas es "
 "antigua.\n"
-" \n"
+"\n"
 "<header>text='Geografía'</header>\n"
-" Los trolls han habitado las montañas del Gran Continente más tiempo que los "
+"Los trolls han habitado las montañas del Gran Continente más tiempo que los "
 "enanos que emigraron allí. Los trolls son una vista común en las sierras "
 "norteñas y al este de Wesnoth, y dondequiera que viajen las hordas orcas."
 
@@ -5916,11 +5924,11 @@ msgstr "<header>text='Unidades con esta habilidad'</header>"
 
 #: src/help.cpp:1260
 msgid "Leaders:"
-msgstr "Líderes: "
+msgstr "Líderes:"
 
 #: src/help.cpp:1269
 msgid "Recruits:"
-msgstr "Reclutas: "
+msgstr "Reclutas:"
 
 #: src/help.cpp:1283
 msgid "Era:"
