--- a/po/wesnoth-tutorial/es.po
+++ b/po/wesnoth-tutorial/es.po
@@ -10,13 +10,15 @@
 # Gustavo Gingins <gusgins@gmail.com>, 2009.
 # Ignacio R. Morelle <shikadilord@users.sourceforge.net>, 2009.
 # J. Cortázar <javier_los_herejes@hotmail.com>, 2011.
+# Aelonin <quianaaelonin@gmail.com>, 2012.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-19 15:14+0100\n"
-"PO-Revision-Date: 2011-11-22 21:36+0100\n"
-"Last-Translator: J. Cortázar <javier_los_herejes@hotmail.com>\n"
+"PO-Revision-Date: 2012-01-02 00:36-0500\n"
+"Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -321,11 +323,6 @@ msgstr "Coronas"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:458
-#, fuzzy
-#| msgid ""
-#| "Note: The tiny metal crown above Delfador means you will lose the game if "
-#| "he is killed. You will also lose the game if your leader (Konrad) is "
-#| "killed."
 msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Konrad) is killed."
@@ -335,11 +332,6 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:462
-#, fuzzy
-#| msgid ""
-#| "Note: The tiny metal crown above Delfador means you will lose the game if "
-#| "he is killed. You will also lose the game if your leader (Li’sar) is "
-#| "killed."
 msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Li’sar) is killed."
@@ -387,7 +379,7 @@ msgstr ""
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:494
 msgid "Click on the <b>End Turn</b> button in the bottom right of the screen"
 msgstr ""
-"Pulsa en el botón <b>Fin de Turno</b> en la parte inferior derecha de la "
+"Pulsa en el botón <b>Fin de turno</b> en la parte inferior derecha de la "
 "pantalla"
 
 #. [message]: id=student
@@ -461,7 +453,7 @@ msgstr ""
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:870
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:922
 msgid "Click on the <b>End Turn</b> button"
-msgstr "Pulsa en el botón de <b>Fin de Turno</b>"
+msgstr "Pulsa en el botón de <b>Fin de turno</b>"
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:601
@@ -957,7 +949,7 @@ msgid ""
 "Turn</b>"
 msgstr ""
 "Avanza otras unidades a la isla o a capturar aldeas, luego pulsa <b>Fin de "
-"Turno</b>"
+"turno</b>"
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:234
@@ -1621,7 +1613,7 @@ msgstr ""
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1145
 msgid "Advance other units and capture villages, then <b>End Turn</b>"
 msgstr ""
-"Avanza otras unidades y captura aldeas, luego pulsa <b>Fin de Turno</b>"
+"Avanza otras unidades y captura aldeas, luego pulsa <b>Fin de turno</b>"
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1137
